# kiwiNPU

./: .editorconfig  .envrc  .gitignore  .justfile  Dockerfile  KiwiNPU_System.sv  Makefile  README.md  build.make  config.json  flake.nix  nn_mac_unit.sv  pyproject.toml  shell.nix  tb_kiwinpu.sv
.github/actions/setup-env/: action.yml
.github/workflows/: main.yml
cst/: Zybo-Z7-Master.xdc
include/: dotproduct_testcases.svh  fixed_point.vh  perceptron_testcases.svh  quantizer_testcases.svh  width.svh
rtl/: Clamper.sv  DotProduct.sv  KiwiNPU.sv  Layer.sv  MACPreActivation.sv  Perceptron.sv  PreActivation.sv  Quantizer.sv  ReLU.sv  SPIMemIO.v  WeightLoader.sv  adder.sv  kiwiNPU.sv
scripts/: dotproduct_generate.py  format.sh  kiwinpu_generate.py  layer_generate.py  openroad_launch.sh  perceptron_generate.py  preactivation_generate.py  quantizer_generate.py  run_tests.sh
tb/: tb_dotproduct.sv  tb_kiwinpu_system.sv  tb_layer.sv  tb_perceptron.sv  tb_preactivation.sv  tb_quantizer.sv  tb_relu.sv  test_adder.py  test_clamper.py  test_layer.py  test_perceptron.py  test_preactivation.py  test_relu.py  utils.py
